@@ -24,7 +24,8 @@ archives and please don't beat me, if I forgot you, but just send me an
 email!): Akira Hatakeyama, Karl J. Runge, Justin "Zippy" Dearing,
 Oliver Mihatsch, Greg Sternberg, Werner Hofer, Giampiero Giancipoli,
 Glenn Mabutt, Paul Kreiner, Erik Kunze, Mike Frysinger, Martin Waitz,
-Mark McLoughlin, Paul Fox, Juan Jose Costello, Andre Leiadella.
+Mark McLoughlin, Paul Fox, Juan Jose Costello, Andre Leiadella,
+Alberto Lusiani.
 
 Probably I forgot quite a few people sending a patch here and there, which
 really made a difference. Without those, some obscure bugs still would
